name:                network-sim
version:             1.0
synopsis:            Simulating (a subset of) the Internet protocol suite
homepage:            http://github.com/prophet-on-that/network-sim
license:             BSD3
license-file:        LICENSE
author:              Alex Bates
maintainer:          ard.bates@gmail.com
copyright:           2016 Alex Bates
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      NetworkSim.LoggingT
    , NetworkSim.LinkLayer
    , NetworkSim.LinkLayer.Logging                     
    , NetworkSim.LinkLayer.MAC
    , NetworkSim.LinkLayer.SimpleNode
    , NetworkSim.LinkLayer.Hub
    , NetworkSim.LinkLayer.Switch

  build-depends:
      base
    , bytestring == 0.10.*
    , stm == 2.4.*
    , exceptions == 0.8.*
    , vector == 0.11.*
    , lifted-async >= 0.7 && < 0.9
    , mtl == 2.2.*
    , text == 1.2.*
    , transformers == 0.4.*
    , monad-control == 1.0.*
    , lifted-base == 0.2.*
    , stm-containers == 0.2.*
    , hashable == 1.2.*
    , time == 1.5.*
    , list-t == 0.4.*
    , focus == 0.1.*
    , fast-logger == 2.4.*
    , transformers-base == 0.4.*

  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options: -W
  default-extensions:
      FlexibleContexts
    , ViewPatterns
    , OverloadedStrings

Test-Suite test-link-layer
  type: exitcode-stdio-1.0
  hs-source-dirs: src-exe/test/link-layer
  main-is: Main.hs
  default-language:    Haskell2010
  ghc-options: -W
  build-depends:
      base 
    , network-sim
    , stm
    , lifted-async
    , exceptions
    , tasty >= 0.10 && < 0.12
    , tasty-hunit == 0.9.*
    , mtl
    , monad-control
    , fast-logger
    , time

source-repository head
  type:     git
  location: https://github.com/githubuser/network-sim
